fix admin controller

--- a/app/views/admins/update.js.erb
+++ b/app/views/admins/update.js.erb
@@ -1,3 +1,6 @@
 $('#message').html('<%= @result %>');
 
+<%# byebug %>
 document.getElementById("update_rate_form").reset();
+$('#admin_rate').val('<%= @changed_rate %>');
+$('#admin_date').val('<%= @date %>');
