--- a/app/views/currencies/index.html.slim
+++ b/app/views/currencies/index.html.slim
@@ -8,8 +8,9 @@
           h5.card-title
             | Current Rate
         .card-body
-          p.card-text#rate
+          p.card-text
             | 1 USD /&nbsp
-            = @rate
+            span#rate
+              = @rate
             | &nbsp RUB
     .col
